force-app/main/default/objects/Asset_Intake_Form__c/Asset_Intake_Form__c.object-meta.xml
<CustomObject>
    <description>Utilized for Intake forms for the Asset</description>
    <label>Asset Intake Form</label>
    <nameField>
        <displayFormat>AIN-{00000000}</displayFormat>
        <label>Intake Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>