force-app/main/default/objects/Asset_Intake_Form__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Patent Family</fullName>
            </value>
            <value>
                <fullName>Existing Patent Family</fullName>
            </value>
            <value>
                <fullName>New Design Family</fullName>
            </value>
            <value>
                <fullName>Existing Design Family</fullName>
            </value>
            <value>
                <fullName>New Mark</fullName>
            </value>
            <value>
                <fullName>Existing Mark</fullName>
            </value>
            <value>
                <fullName>Patent</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Opposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>