force-app/main/default/objects/Asset_Intake_Form__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipLabel>Asset Intake Forms</relationshipLabel>
    <relationshipName>Asset_Intake_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>