force-app/main/default/objects/Asset_Intake_Form__c/fields/Conflict_Check__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflict Check</label>
    <referenceTo>Conflict_Check__c</referenceTo>
    <relationshipLabel>Asset Intake Forms</relationshipLabel>
    <relationshipName>Asset_Intake_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>