force-app/main/default/objects/Asset_Intake_Form__c/fields/Current_Page__c.field-meta.xml
<CustomField>
    <fullName>Current_Page__c</fullName>
    <label>Current Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicants</fullName>
            </value>
            <value>
                <fullName>Innovators</fullName>
            </value>
            <value>
                <fullName>Personnel</fullName>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Classes and Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>