force-app/main/default/objects/Asset_Intake_Form__c/fields/Dispute_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Sub_Type__c</fullName>
    <label>Dispute Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offensive</fullName>
            </value>
            <value>
                <fullName>Defensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>