force-app/main/default/objects/Asset_Intake_Form__c/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <label>Dispute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>