force-app/main/default/objects/Asset_Intake_Form__c/fields/Image_ContentVersion__c.field-meta.xml
<CustomField>
    <fullName>Image_ContentVersion__c</fullName>
    <description>To store the uploaded images</description>
    <label>Image ContentVersion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>