force-app/main/default/objects/Asset_Intake_Form__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Mark</label>
    <referenceTo>SymphonyLF__Mark__c</referenceTo>
    <relationshipLabel>Asset Intake Forms</relationshipLabel>
    <relationshipName>Asset_Intake_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>