force-app/main/default/objects/Asset_Intake_Form__c/fields/Mark_Type__c.field-meta.xml
<CustomField>
    <fullName>Mark_Type__c</fullName>
    <label>Mark Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Collective</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Pattern</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shape</fullName>
            </value>
            <value>
                <fullName>Shapes of Goods</fullName>
            </value>
            <value>
                <fullName>Slogan</fullName>
            </value>
            <value>
                <fullName>Smell</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Three Dimension</fullName>
            </value>
            <value>
                <fullName>Two Dimensional</fullName>
            </value>
            <value>
                <fullName>Word</fullName>
            </value>
            <value>
                <fullName>Trademark/Servicemark</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>