force-app/main/default/objects/Asset_Intake_Form__c/fields/New_Mark_Title__c.field-meta.xml
<CustomField>
    <fullName>New_Mark_Title__c</fullName>
    <label>New Mark Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>