force-app/main/default/objects/Asset_Intake_Form__c/fields/New_Patent_Family__c.field-meta.xml
<CustomField>
    <fullName>New_Patent_Family__c</fullName>
    <label>New Patent Family Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>