force-app/main/default/objects/Asset_Intake_Form__c/fields/Patent_Family__c.field-meta.xml
<CustomField>
    <fullName>Patent_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent Family</label>
    <referenceTo>SymphonyLF__Patent_Family__c</referenceTo>
    <relationshipLabel>Asset Intake Forms</relationshipLabel>
    <relationshipName>Asset_Intake_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>