force-app/main/default/objects/Asset_Intake_Form__c/fields/Patent_Family_Derived__c.field-meta.xml
<CustomField>
    <fullName>Patent_Family_Derived__c</fullName>
    <formula>BLANKVALUE(New_Patent_Family__c, Patent_Family__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patent Family Derived Name</label>
    <type>Text</type>
</CustomField>